# VISH

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  appcast.xml  log.md  project.yml
.claude/: settings.json
.claude/agents/: vish-engineer.md
.claude/hooks/: append-log.sh
apps/vish/: Cargo.toml
apps/vish/src/: main.rs
apps/vishd/: Cargo.toml
apps/vishd/src/: main.rs
benchmarks/: 2026-04-24.json  2026-04-25.json  2026-04-26.json  2026-04-27.json  2026-04-28.json  2026-04-30.json  ai-2026-04-25.json  ai-2026-04-26.json
crates/vish-core/: Cargo.toml
crates/vish-core/src/: lib.rs
crates/vish-embed/: Cargo.toml
crates/vish-embed/src/: lib.rs
crates/vish-index/: Cargo.toml
crates/vish-index/src/: lib.rs
crates/vish-llm/: Cargo.toml
crates/vish-llm/src/: lib.rs
crates/vish-macos/: Cargo.toml  NOTES.md
crates/vish-macos/src/: hotkey.rs  lib.rs  panel.rs  vibrancy.rs
crates/vish-mlx/: Cargo.toml
crates/vish-mlx/src/: lib.rs
crates/vish-sources/: Cargo.toml
crates/vish-sources/src/: lib.rs
crates/vish-ui/: Cargo.toml
crates/vish-ui/src/: lib.rs  root.rs  theme.rs
docs/: AI_INTEGRATION.md  OPTIMIZATION_TASKS.md  PHASE_1_PLAN.md  PRODUCTION_READINESS.md  RICH_EXPERIENCE_TASKS.md
docs/releases/: v0.1.0-alpha.1.md  v0.1.0-alpha.4.md  v0.1.0-alpha.5.md
scripts/: ai-benchmark.sh  benchmark.sh  dev.sh  release.sh  reset-tcc.sh  signpost-report.sh
vish/: main.swift
vish.xcodeproj/: project.pbxproj
vish.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
vish.xcodeproj/xcshareddata/xcschemes/: vish.xcscheme
vish/App/: AppDelegate.swift  HotkeyController.swift  LauncherController.swift  LauncherPreferences.swift  MenuBarController.swift  UpdateController.swift
vish/Onboarding/: OnboardingController.swift  OnboardingView.swift
vish/Resources/: Info.plist
vish/Search/: FuzzyMatcher.swift  ResultActionExecutor.swift  SearchActor.swift  SearchResult.swift  SearchSource.swift
vish/Settings/: ClipboardSettingsModel.swift  FileScopeSettingsModel.swift  LocalAISettingsModel.swift  PrivacyDashboardModel.swift  QuicklinkSettingsModel.swift  SettingsController.swift  SettingsView.swift  SnippetSettingsModel.swift
vish/Sources/AI/: AIContextBuilder.swift  FilePreviewReader.swift  LocalAIClient.swift  SemanticFileFinder.swift  SemanticVectorIndexStore.swift
vish/Sources/Apps/: AppCatalogWatcher.swift  AppSource.swift
vish/Sources/Calculator/: CalculatorSource.swift
vish/Sources/Clipboard/: ClipboardHistory.swift
vish/Sources/Preview/: ResultPreviewProvider.swift
vish/Sources/Quicklinks/: QuicklinkIconRenderer.swift  QuicklinkSource.swift
vish/Sources/Snippets/: SnippetSource.swift
vish/Sources/Spotlight/: SpotlightSource.swift
vish/Sources/SystemActions/: SystemActionsSource.swift
vish/Sources/URLs/: URLSource.swift
vish/Sources/WebSearch/: WebSearchSource.swift
vish/Storage/: IndexStore.swift
vish/Window/: AIInlineAnswerView.swift  InlineActionsView.swift  InputField.swift  LauncherPanel.swift  NoHorizontalScrollClipView.swift  ResultCellView.swift  ResultPreviewView.swift  ResultsTableView.swift
