[workspace]
resolver = "2"
members = [
    "apps/vish",
    "apps/vishd",
    "crates/vish-core",
    "crates/vish-index",
    "crates/vish-sources",
    "crates/vish-embed",
    "crates/vish-llm",
    "crates/vish-mlx",
    "crates/vish-macos",
    "crates/vish-ui",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "proprietary"
authors = ["Rahul Kashyap <rahul@foundertool.ai>"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "808df4069295ef4e0b3b01445671c3c7057377cd" }
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false }
objc2-foundation = { version = "0.3", default-features = false }
dispatch2 = "0.3"
global-hotkey = "0.7"
window-vibrancy = "0.6"
raw-window-handle = { version = "0.6", features = ["std"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[profile.dev]
opt-level = 1   # GPUI at opt-level 0 is unwatchable
