[package]
name = "vish"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "vish"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
vish-macos = { path = "../../crates/vish-macos" }
gpui.workspace = true
gpui_platform.workspace = true
global-hotkey.workspace = true
objc2.workspace = true
objc2-app-kit = { workspace = true, features = [
    "NSApplication",
    "NSResponder",
    "NSRunningApplication",
] }
tokio.workspace = true
